# mtp-f

./: Dockerfile  README.md  build.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.  setup.cfg  test.py
alembic/: env.py
alembic/versions/: 4ced65cd75d2_adding_paid_column_to_users.py  564f17457e23_adding_paid_column_to_invoice.py  56d6a44844d6_adding_total_for_container.py  6eea7adb91d5_dette_tables.py  896cbc45acbf_magasin_tables.py  89f345fbe751_container_tables.py  9b7f0314cc34_depot_tables.py  a53bdbfea521_products_tables.py  ab878efd72d4_role_and_client_table.py  b0f73eec3a5f_invoiceitems_tables.py  c10103d826fe_adding_foreign_key_to_magsim.py  c58318a393ee_adding_gerant_magasin.py  c8891c1f6abf_categories_tables.py  d0ff398cbc6c_users_tables.py  f3e8868915bd_adding_foreign_key_invoice.py  f9974ce5179d_adding_product_depot_foreign_key.py  ff58fd21cc27_invoice_tables.py
app/: database.py  initial_data.py  main.py  models.py  oauth2.py  schemas.py  test.py  utils.py
app/repository/: auth.py  category.py  client.py  container.py  depense.py  depot.py  dette.py  inventory.py  invoice.py  magasin.py  product.py  role.py  user.py
app/routers/: auth.py  category.py  client.py  container.py  depense.py  depot.py  dette.py  inventory.py  invoice.py  magasin.py  post.py  product.py  role.py  user.py
nginx/: nginx.conf
tests/: conftest.py  database.py  test_users.py
