[tool.poetry]
name = "mtp-f"
version = "0.1.0"
description = ""
authors = ["thierno <thiernoibrahimalo@esp.sn>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
alembic = "^1.7.6"
pytest = "^7.0.1"
psycopg2 = "^2.9.3"
uvicorn = "^0.17.4"
pydantic = "^1.9.0"
email-validator = "^1.1.3"
jose = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
